feat: Se agregan pruebas unitarias con mockito y karate